# MiniOpenGLTemplate

./: CMakeLists.txt  README.md
MiniOpenGLTemplate/: CMakeLists.txt  MiniOpenGLTemplate.cpp  MiniOpenGLTemplate.h
MiniOpenGLTemplate/shaders/: fragment_shader.glsl  vertex_shader.glsl
MiniOpenGLTemplate/utils/: Camera.cpp  Camera.hpp  Graphics.cpp  Graphics.hpp  Resources.hpp  Shaders.cpp  Shaders.hpp  Textures.cpp  Textures.hpp
